@@ -1,20 +1,32 @@
 package gg.projecteden.nexus.features.events.store;
 
+import gg.projecteden.exceptions.EdenException;
 import gg.projecteden.nexus.Nexus;
+import gg.projecteden.nexus.features.events.store.models.EventStoreImage;
+import gg.projecteden.nexus.features.menus.MenuUtils;
+import gg.projecteden.nexus.framework.exceptions.postconfigured.InvalidInputException;
 import gg.projecteden.nexus.models.eventuser.EventUser;
 import gg.projecteden.nexus.models.eventuser.EventUserService;
+import gg.projecteden.nexus.models.mail.Mailer.Mail;
 import gg.projecteden.nexus.models.nerd.Rank;
+import gg.projecteden.nexus.utils.BlockUtils;
+import gg.projecteden.nexus.utils.MaterialTag;
+import gg.projecteden.nexus.utils.StringUtils;
 import gg.projecteden.nexus.utils.WorldGroup;
+import gg.projecteden.utils.Utils;
 import me.arcaniax.hdb.api.PlayerClickHeadEvent;
 import org.bukkit.GameMode;
+import org.bukkit.block.Sign;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
+import org.bukkit.event.player.PlayerInteractEvent;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static gg.projecteden.nexus.features.events.Events.STORE_PREFIX;
+import static gg.projecteden.nexus.utils.PlayerUtils.send;
+import static gg.projecteden.nexus.utils.StringUtils.stripColor;
 
 public class EventStoreListener implements Listener {
 
@@ -22,43 +34,106 @@ public class EventStoreListener implements Listener {
 		Nexus.registerListener(this);
 	}
 
-	private static final List<WorldGroup> hdb_allowedWorldGroups = Arrays.asList(WorldGroup.SURVIVAL, WorldGroup.SKYBLOCK, WorldGroup.ONEBLOCK);
-	private static final List<WorldGroup> hdb_bypassWorldGroups = Arrays.asList(WorldGroup.CREATIVE, WorldGroup.STAFF);
+	private void handleException(Player player, Exception ex) {
+		if (ex instanceof EdenException) {
+			send(player, STORE_PREFIX + "&c" + ex.getMessage());
+		} else {
+			ex.printStackTrace();
+			send(player, STORE_PREFIX + "An unknown error occurred");
+		}
+	}
+
+	private static final List<WorldGroup> HDB_ALLOWED = List.of(WorldGroup.SURVIVAL, WorldGroup.SKYBLOCK, WorldGroup.ONEBLOCK);
+	private static final List<WorldGroup> HDB_BYPASS = List.of(WorldGroup.CREATIVE, WorldGroup.STAFF);
 
 	@EventHandler
 	public void onPlayerClickHeadDatabase(PlayerClickHeadEvent event) {
 		final Player player = event.getPlayer();
-		final WorldGroup worldGroup = WorldGroup.of(player);
-		final Rank rank = Rank.of(player);
+		try {
+			final WorldGroup worldGroup = WorldGroup.of(player);
+			final Rank rank = Rank.of(player);
 
-		final EventUserService service = new EventUserService();
-		final EventUser user = service.get(player);
+			int price = EventStoreItem.DECORATION_HEADS.getPrice();
 
-		int price = EventStoreItem.HEADS.getPrice();
+			if (rank.isSeniorStaff())
+				return;
 
-		if (rank.isAdmin())
-			return;
+			if (rank.isStaff() && player.getGameMode() == GameMode.CREATIVE)
+				return;
 
-		if (rank.isStaff() && player.getGameMode() == GameMode.CREATIVE)
-			return;
+			if (HDB_BYPASS.contains(worldGroup))
+				return;
 
-		if (hdb_bypassWorldGroups.contains(worldGroup))
-			return;
+			if (!HDB_ALLOWED.contains(worldGroup))
+				throw new InvalidInputException("You can not purchase heads in this world");
 
-		if (!hdb_allowedWorldGroups.contains(worldGroup)) {
+			new EventUserService().edit(player, user -> user.charge(price));
+		} catch (Exception ex) {
 			event.setCancelled(true);
-			user.sendMessage(STORE_PREFIX + "You can not purchase heads here");
-			return;
+			handleException(player, ex);
 		}
+	}
 
-		if (!user.hasTokens(price)) {
-			event.setCancelled(true);
-			user.sendMessage(STORE_PREFIX + "&cYou do not have enough tokens to purchase a head");
-			return;
+	@EventHandler
+	public void onClickSign(PlayerInteractEvent event) {
+		final Player player = event.getPlayer();
+
+		try {
+			if (!player.getWorld().getName().equalsIgnoreCase("server"))
+				return;
+			if (BlockUtils.isNullOrAir(event.getClickedBlock()))
+				return;
+			if (!MaterialTag.SIGNS.isTagged(event.getClickedBlock().getType()))
+				return;
+			if (!(event.getClickedBlock().getState() instanceof Sign sign))
+				return;
+
+			final String prefix = stripColor(sign.getLine(0));
+			if (!prefix.equalsIgnoreCase("[Purchase]"))
+				return;
+
+			final String title = (sign.getLine(2).trim() + " " + sign.getLine(3).trim()).trim();
+			if (StringUtils.isNullOrEmpty(title))
+				return;
+
+			final EventStoreImage image = EventStoreImage.of(title);
+			if (image == null)
+				return;
+
+			final String priceString = stripColor(sign.getLine(1)).split(" ")[0];
+			if (!Utils.isInt(priceString))
+				return;
+
+			final int price = Integer.parseInt(priceString);
+
+			final EventUserService service = new EventUserService();
+			final EventUser user = service.get(player);
+
+			user.checkHasTokens(price);
+
+			MenuUtils.ConfirmationMenu.builder()
+				.title("&4&lAre you sure?")
+				.confirmText("&aBuy")
+				.confirmLore(List.of(
+					"&3Painting: &e" + title,
+					"&3Price: &e" + stripColor(sign.getLine(1)),
+					"&3Balance: &e" + user.getTokens() + " Event Tokens"
+				))
+				.cancelText("&cCancel")
+				.onConfirm(e -> {
+					try {
+						user.charge(price);
+						service.save(user);
+						Mail.fromServer(player.getUniqueId(), WorldGroup.SURVIVAL, image.getSplatterMap()).send();
+						send(player, STORE_PREFIX + "Your image has been mailed to you in the Survival world");
+					} catch (Exception ex) {
+						handleException(player, ex);
+					}
+				})
+				.open(player);
+		} catch (Exception ex) {
+			handleException(player, ex);
 		}
-
-		user.takeTokens(price);
-		service.save(user);
 	}
 
 }
